# blacktea

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  metadata.json  package_list.json
include/hello_package/: greeting.h
include/package_manager/: CurledData.h  Metadata.h  config.h  package_manager.h  utils.h
include/package_manager/classes/: CurledData.h  Metadata.h
scripts/: build.sh  hash.sh  install.sh  run.sh
src/: download.cpp  fetch_package_list.cpp  greeting.cpp  main.cpp  package_manager.cpp  package_manager.h  utils.cpp
src/package_manager/: CurledData.cpp  Metadata.cpp  config.cpp  download.cpp  fetch.cpp  fetch_package_list.cpp  install_package.cpp  package_manager.cpp  utils.cpp
src/package_manager/classes/: CurledData.cpp  Metadata.cpp
tests/: tests.cpp
